<resources>
    <string name="app_name">PhoTrade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="connection_error">"Sorry, please check your connection."</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="kota">Kota</string>
    <string name="KLahir">Kota Lahir</string>
    <string name="TLahir">Tanggal Lahir</string>
    <string name="Telphone">Phone No.</string>
    <string name="Alamat">Alamat</string>
    <string name="Bio">Bio</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="RPassword">Re-Password</string>
    <string name="NPassword">New-Password</string>
    <string name="Gender">Gender</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="Inbox">Inbox</string>
    <string name="mail">Mail</string>
    <string name="HasAcc">Already has an account.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="nav_menu_open">Navigation opened</string>
    <string name="nav_menu_close">Navigation closed</string>
    <string name="Spec">Specification</string>
    <string name="batrai">Battery</string>
    <string name="kamera">Camera</string>
    <string name="sensor">Censor</string>
    <string name="koneksi">Connection</string>
    <string name="dimensi">Dimention</string>
    <string name="memori">Memmory</string>
    <string name="productname">Nama Product</string>
    <string name="network">Network</string>
    <string name="screen">Screen</string>
    <string name="softhard">Software and Hardware</string>
    <string name="main">Main</string>
    <string name="thread">Thread</string>
    <string name="navigation_view_item_1">Navigation Item 1</string>
    <string name="navigation_view_item_2">Navigation Item 2</string>
    <string name="navigation_view_item_3">Navigation Item 3</string>
    <string name="navigation_view_item_4">Navigation Item 4</string>
    <string name="navigation_view_item_5">Navigation Item 5</string>
    <string name="navigation_view_item_6">Navigation Item 6</string>
    <string name="navigation_view_category_1">Navigation View Category</string>
    <string name="navigation_view_category_2">Navigation View Category</string>
    <string name="no_data_available">No Data</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="replay">Replay</string>
</resources>
