<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/main"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/main" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/navigation_view_item_2" />
    </group>

    <item
        android:id="@+id/navigation_view_category_2"
        android:title="@string/navigation_view_category_2">
        <menu>
            <item
                android:id="@+id/nav_item_inbox"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/Inbox" />
            <item
                android:id="@+id/navigation_item_4"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/navigation_view_item_4" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>