<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/backgroundlogin"
    tools:context="com.mvp.ptrade.View.Fragment.RegisterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/White"
            android:textSize="35dp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            android:background="@drawable/shape">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/regis_txtusername"
                android:hint="@string/Username"
                android:textColor="@color/White"
                android:textColorHint="@color/White" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/regis_txtemail"
                android:hint="@string/Email"
                android:textColor="@color/White"
                android:textColorHint="@color/White" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/regis_txtpassword1"
                android:hint="@string/Password"
                android:textColor="@color/White"
                android:textColorHint="@color/White" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/regis_txtpassword2"
                android:hint="@string/RPassword"
                android:textColorHint="@color/White" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/regis_registerbtn"
                android:text="@string/Register"
                android:textColor="@color/White"
                android:background="@drawable/buttonauthshape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/HasAcc"
                android:textColor="@color/White"
                android:id="@+id/regis_txtlogin"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
