<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="textPersonName"
        android:hint="@string/from"
        android:ems="10"
        android:id="@+id/msgrec_sender"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/msgrec_sender"
        android:layout_marginBottom="5dp"
        android:inputType="textPersonName"
        android:hint="@string/subject"
        android:ems="10"
        android:id="@+id/msgrec_subject"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/msgrec_msg"
        android:layout_height="match_parent"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_above="@+id/msgrec_btnreplay"
        android:layout_below="@+id/msgrec_subject" />

    <Button
        android:text="@string/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/msgrec_btnclose"
        android:layout_gravity="bottom"/>

    <Button
        android:text="@string/replay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msgrec_btnreplay"
        android:layout_gravity="bottom"
        android:layout_above="@+id/msgrec_btnclose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>