<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@mipmap/profile_pic"
                android:id="@+id/imageView"
                android:layout_height="150dp"
                android:contentDescription="@string/productname"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/frag_pro_name"
                android:textAlignment="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_width="150dp">

                    <TextView
                        android:text="@string/Username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_username_label"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/Email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_email_label"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_label_city"
                        android:textSize="18sp"
                        android:text="@string/KLahir" />

                    <TextView
                        android:text="@string/Alamat"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_label_Address"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/Gender"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_label_gender"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/TLahir"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_label_ttl"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/Telphone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_label_phone"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/Bio"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:id="@+id/frag_pro_label_bio"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/frag_pro_username" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/frag_pro_email" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/frag_pro_kota" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/frag_pro_address" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/frag_pro_spinner_gender"
                        />

                    <DatePicker
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/frag_pro_datePicker" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/frag_pro_phone" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/frag_pro_bio" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:text="Save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_pro_btnsave" />

            <Button
                android:text="Close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_pro_btnclose" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>