<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                android:text="@string/productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_product_name"
                android:textSize="24sp"
                android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@mipmap/profile_pic"
                    android:id="@+id/imageView"
                    android:layout_height="150dp"
                    android:contentDescription="@string/productname"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/simpleborder">

                    <TextView
                        android:text="@string/Spec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_product_spec"
                        android:textAlignment="center" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/network"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_jaringan"
                            android:textAlignment="center" />

                        <!--<ListView-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="match_parent" />-->
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/dimensi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_dimensi"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/screen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_layar"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/softhard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_softhard"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/kamera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_kamera"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/memori"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_memori"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/koneksi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_koneksi"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/sensor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_sensor"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simpleborder">

                        <TextView
                            android:text="@string/batrai"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/frag_product_baterai"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Owener Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/frag_product_owner">
                    <TextView
                        android:text="info tambahan dari owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/frag_product_infoowner"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:text="Trade Offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_product_btnoffer" />
            <Button
                android:text="Close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frag_product_btncls" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>